<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:orientation="vertical">

  <EditText
      android:id="@+id/editTextTextPersonName2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="10"
      android:textSize="30sp"
      android:inputType="text"
      android:text=""
      tools:ignore="LabelFor,MissingConstraints"
      android:autofillHints=""
      android:hint="@string/editTextTextPersonName2"/>

  <EditText
      android:id="@+id/editTextTextPersonName3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="20"
      android:textSize="30sp"
      android:inputType="textPersonName"
      android:text=""
      tools:ignore="LabelFor,MissingConstraints"
      android:autofillHints=""
      android:hint="@string/editTextTextPersonName3"/>

  <EditText
      android:id="@+id/editTextTextPassword"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="9"
      android:textSize="30sp"
      android:inputType="textPassword"
      tools:ignore="LabelFor,MissingConstraints"
      android:autofillHints=""
      android:hint="@string/EnterPassword"/>

  <EditText
      android:id="@+id/editTextNumberPassword2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="7"
      android:textSize="30sp"
      android:inputType="numberPassword"
      tools:ignore="LabelFor,MissingConstraints"
      android:autofillHints=""
      android:hint="@string/EnterPassword"/>

  <EditText
      android:id="@+id/editTextTextEmailAddress2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="20"
      android:textSize="30sp"
      android:inputType="textEmailAddress"
      tools:ignore="LabelFor,MissingConstraints"
      android:autofillHints=""
      android:hint="@string/EnterEMail"/>

  <EditText
      android:id="@+id/editTextPhone2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="20"
      android:textSize="30sp"
      android:inputType="phone"
      tools:ignore="LabelFor,MissingConstraints"
      android:autofillHints=""
      android:hint="@string/EnterPhoneNumber"/>

  <EditText
      android:id="@+id/editTextTime"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="20"
      android:textSize="30sp"
      android:inputType="time"
      tools:ignore="LabelFor,MissingConstraints"
      android:autofillHints=""
      android:hint="@string/EnterTime"/>

  <EditText
      android:id="@+id/editTextNumber2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="20"
      android:textSize="30sp"
      android:inputType="number"
      tools:ignore="LabelFor,MissingConstraints"
      android:autofillHints=""
      android:hint="@string/EnterNumber"/>

  <Button
      android:id="@+id/buttonToOtherActivity"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/buttonToOtherActivity"
      android:textColor="@color/lime"
      android:textColorHighlight="@color/black"
      android:textSize="45sp" />


</LinearLayout>